--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description:
 cover: assets/images/Wallpaper2.jpg
 logo: assets/images/logo2.png
 favicon: assets/images/favicon.png
-baseurl: "/ReinforceMyLearning/" # the subpath of your site, e.g. /blog/ or / for root
+baseurl: "" # the subpath of your site, e.g. /blog/ or / for root
 # url: "https://samanyougarg.com" # the base hostname & protocol for your site
 paginate: 5 # The number of posts to show per page on your homepage 
 # Social
